--- a/lib/src/main/res/drawable/snackprogressbar_background_rounded.xml
+++ b/lib/src/main/res/drawable/snackprogressbar_background_rounded.xml
@@ -4,6 +4,6 @@
 
     <corners android:radius="4dp" />
 
-    <solid android:color="@color/background" />
+    <solid android:color="@color/snackProgressBar_background" />
 
 </shape>
