--- a/lib/src/main/res/layout/snackprogressbar.xml
+++ b/lib/src/main/res/layout/snackprogressbar.xml
@@ -65,8 +65,8 @@
                 android:paddingRight="@dimen/snackProgressBar_padding_left_right"
                 android:text=""
                 android:textAlignment="viewStart"
-                android:textColor="@color/textWhitePrimary"
-                android:textSize="@dimen/text_body"
+                android:textColor="@color/snackProgressBar_textWhitePrimary"
+                android:textSize="@dimen/snackProgressBar_text_body"
                 android:visibility="visible" />
 
             <ProgressBar
@@ -98,7 +98,7 @@
                     android:longClickable="false"
                     android:max="100"
                     android:progress="0"
-                    android:progressDrawable="@drawable/progressbar_circle"
+                    android:progressDrawable="@drawable/snackprogressbar_progressbar_circle"
                     android:rotation="-90"
                     android:visibility="gone" />
 
@@ -112,8 +112,8 @@
                     android:gravity="center"
                     android:longClickable="false"
                     android:text="0"
-                    android:textColor="@color/textWhitePrimary"
-                    android:textSize="@dimen/text_body"
+                    android:textColor="@color/snackProgressBar_textWhitePrimary"
+                    android:textSize="@dimen/snackProgressBar_text_body"
                     android:visibility="gone" />
 
             </RelativeLayout>
@@ -128,13 +128,13 @@
                 android:gravity="center"
                 android:longClickable="false"
                 android:text="0%"
-                android:textColor="@color/textWhitePrimary"
-                android:textSize="@dimen/text_body"
+                android:textColor="@color/snackProgressBar_textWhitePrimary"
+                android:textSize="@dimen/snackProgressBar_text_body"
                 android:visibility="gone" />
 
             <TextView
                 android:id="@+id/snackProgressBar_txt_action"
-                style="@style/FontMediumStyle"
+                style="@style/SnackProgressBarFontMediumStyle"
                 android:layout_width="wrap_content"
                 android:layout_height="@dimen/snackProgressBar_height_single"
                 android:layout_gravity="center"
@@ -143,14 +143,14 @@
                 android:gravity="center_vertical"
                 android:longClickable="false"
                 android:textColor="@color/colorAccent"
-                android:textSize="@dimen/text_body"
+                android:textSize="@dimen/snackProgressBar_text_body"
                 android:visibility="gone" />
 
         </LinearLayout>
 
         <TextView
             android:id="@+id/snackProgressBar_txt_actionNextLine"
-            style="@style/FontMediumStyle"
+            style="@style/SnackProgressBarFontMediumStyle"
             android:layout_width="match_parent"
             android:layout_height="@dimen/snackProgressBar_height_actionNextLine"
             android:layout_marginRight="@dimen/snackProgressBar_padding_left_right"
@@ -158,7 +158,7 @@
             android:gravity="top|right"
             android:longClickable="false"
             android:textColor="@color/colorAccent"
-            android:textSize="@dimen/text_body" />
+            android:textSize="@dimen/snackProgressBar_text_body" />
 
     </LinearLayout>
 
